--- a/boss.ini
+++ b/boss.ini
@@ -208,3 +208,28 @@ gentime = 03:30
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
+
+bossname = 망각의 거울
+gentime = 11:00
+nogencheck = 0
+before_alert_ment = 입니다. 거울의 숲 준비하세요
+alert_ment = 입니다. 거울의 숲으로 오세요
+
+bossname = 히실로메
+gentime = 06:00
+nogencheck = 0
+before_alert_ment = 입니다. 격전의 평원 준비하세요
+alert_ment = 입니다. 격전의 평원으로 오세요
+
+bossname = 란도르
+gentime = 09:00
+nogencheck = 0
+before_alert_ment = 입니다. 망각의 평원 준비하세요
+alert_ment = 입니다. 망각의 평원으로 오세요
+
+bossname = 글라키
+gentime = 08:00
+nogencheck = 0
+before_alert_ment = 입니다. 고요한 분지 준비하세요
+alert_ment = 입니다. 고요한 분지 오세요
+
