--- a/boss.ini
+++ b/boss.ini
@@ -179,13 +179,13 @@ nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 바프장
-gentime = 03:30
+bossname = 코룬
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 코룬
+bossname = 에러
 gentime = 06:00
 nogencheck = 0
 before_alert_ment = 입니다. 상아탑 2층 준비하세요
@@ -203,8 +203,8 @@ nogencheck = 0
 before_alert_ment = 입니다. 피의 늪지대 준비하세요
 alert_ment = 입니다. 피의 늪지대로 오세요
 
-bossname = 불프장
-gentime = 03:30
+bossname = 사무엘
+gentime = 12:00
 nogencheck = 0
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
